--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -170,6 +170,7 @@
      <Compile Include="Assets\UI\BuildingDialog.cs" />
      <Compile Include="Assets\UI\Corner.cs" />
      <Compile Include="Assets\UI\Dialog.cs" />
+     <Compile Include="Assets\UI\DialogShade.cs" />
      <Compile Include="Assets\UI\Slider.cs" />
      <Compile Include="Assets\UI\StatsPanel.cs" />
      <None Include="Assets\NGUI\ReadMe - 3.9.6c.txt" />
