--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -177,6 +177,7 @@
      <Compile Include="Assets\UI\InventoryLabel.cs" />
      <Compile Include="Assets\UI\MapNavigator.cs" />
      <Compile Include="Assets\UI\MenuBar.cs" />
+     <Compile Include="Assets\UI\SceneTransition.cs" />
      <Compile Include="Assets\UI\Slider.cs" />
      <Compile Include="Assets\UI\StatsPanel.cs" />
      <None Include="Assets\NGUI\ReadMe - 3.9.6c.txt" />
