--- a/Assembly-CSharp-Editor.csproj
+++ b/Assembly-CSharp-Editor.csproj
@@ -46,6 +46,8 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Editor\Test\BuildingTest.cs" />
+     <Compile Include="Assets\Editor\Test\CityTest.cs" />
      <Compile Include="Assets\Editor\Test\HexTest.cs" />
      <Compile Include="Assets\Editor\Test\PrimativesTest.cs" />
      <Compile Include="Assets\NGUI\Scripts\Editor\ActiveAnimationEditor.cs" />
