--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Controllers\CameraControl.cs" />
+     <Compile Include="Assets\Controllers\EffectsController.cs" />
      <Compile Include="Assets\Controllers\GameAssets.cs" />
      <Compile Include="Assets\Controllers\GameController.cs" />
      <Compile Include="Assets\Controllers\Home.cs" />
