--- a/Assembly-CSharp-Editor.csproj
+++ b/Assembly-CSharp-Editor.csproj
@@ -46,6 +46,7 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Editor\LevelDesignEditor.cs" />
      <Compile Include="Assets\Editor\RXSolutionFixer.cs" />
      <Compile Include="Assets\Editor\Test\BuildingTest.cs" />
      <Compile Include="Assets\Editor\Test\CityTest.cs" />
