--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -53,6 +53,7 @@
      <Compile Include="Assets\Controllers\Home.cs" />
      <Compile Include="Assets\Controllers\HoverControl.cs" />
      <Compile Include="Assets\Controllers\Interstitial.cs" />
+     <Compile Include="Assets\Controllers\LevelDesigner.cs" />
      <Compile Include="Assets\Controllers\MusicController.cs" />
      <Compile Include="Assets\Controllers\SelectionController.cs" />
      <Compile Include="Assets\Game.cs" />
